--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": { "Kolina\\CustomerBundle\\": "" }
     }
