Move FOSUserBundle to suggest

--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
     "require": {
         "php": ">=5.3.9",
         "symfony/framework-bundle": "~2.3|~3.0",
-        "sonata-project/core-bundle": "^3.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "sonata-project/core-bundle": "^3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7"
+    },
+    "suggest": {
+        "friendsofsymfony/user-bundle": "For integration with FOSUserBundle"
     },
     "extra": {
         "branch-alias": {
