--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=5.6",
         "symfony/framework-bundle": "~2.3|~3.0",
-        "sonata-project/core-bundle": "^3.0"
+        "sonata-project/core-bundle": "^3.0",
+        "friendsofsymfony/user-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
