--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests"
+      "Kolina\\CustomerBundle\\Tests": "tests"
     }
   },
   "scripts": {
